# orca

./: .gitignore  Cargo.toml  README.md  WORKFLOW.md  settings.toml
config/: orca.default.toml  rtl-spec-to-env.toml
config/instructions/: rtl_design.md  uvm_test_bench.md
crates/orca-cli/: Cargo.toml
crates/orca-cli/src/: app.rs  args.rs  lib.rs  logging.rs  main.rs  ui_config.rs
crates/orca-cli/src/render/: mod.rs  plain.rs
crates/orca-cli/src/tui/: mod.rs  theme.rs  widgets.rs
crates/orca-cli/tests/: cli.rs  goal.rs
crates/orca-core/: Cargo.toml
crates/orca-core/src/: agent.rs  agent_backend.rs  approval.rs  artifacts.rs  completion.rs  config.rs  errors.rs  executor.rs  goal.rs  instructions.rs  lib.rs  model.rs  orchestrator.rs  output.rs  planner.rs  scheduler.rs  settings.rs
crates/orca-core/src/instructions/: copilot_cli_helper.md  critique.md  feature_coverage.md  feature_generation.md  feedback.md  kpi_generation.md  kpi_measurement.md  orchestration.md  parallel_run.md  planning.md  test_generation.md  test_planning.md  work.md
crates/orca-core/src/output/: state.rs
crates/orca-desktop/: Cargo.toml
crates/orca-desktop-runtime/: Cargo.toml  tauri.conf.json
crates/orca-desktop-runtime/src/: lib.rs  main.rs
crates/orca-desktop/src/: lib.rs  main.rs
crates/orca-gui/: Cargo.toml
crates/orca-gui/src/: app.rs  controls.rs  main.rs  panes.rs  run_controller.rs  settings_panel.rs  ui_config.rs
rtl_playground/: .gitignore  Makefile  README.md  filelist.f
rtl_playground/rtl/: jpeg_filter_applier.sv  tensor_unit.sv  tensor_unit_8bit.sv
rtl_playground/scripts/: clean.sh  run_vcs.sh  run_verdi.sh
rtl_playground/tb/: jpeg_filter_if.sv  jpeg_filter_uvm_pkg.sv  tb_jpeg_filter_applier.sv  tb_tensor_unit.sv  tb_tensor_unit_dft_uvm.sv  tensor_unit_dft_if.sv  tensor_unit_dft_uvm_pkg.sv
skills/copilot-cli-helper/: SKILL.md
ui/desktop/: package-lock.json  package.json  vite.config.ts
ui/desktop/src/: main.tsx
ui/desktop/src/app/: App.tsx
ui/desktop/src/components/ui/: button.tsx  card.tsx  input.tsx  textarea.tsx
ui/desktop/src/lib/: tauri.ts  types.ts
ui/desktop/src/styles/: index.css
