[package]
name = "orca-desktop-runtime"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[workspace]

[lib]
name = "orca_desktop_runtime"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "orca-desktop"
path = "src/main.rs"

[dependencies]
orca-core = { path = "../orca-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }

[build-dependencies]
tauri-build = "2"
